k8s/depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pot-deployment
#  labels:
#    app: pot
#    version: blue
#  namespace: pot
spec:
  replicas: 2
  selector:
    matchLabels:
      app: pot
#      version: blue
  template:
    metadata:
      labels:
        app: pot
#        version: blue
    spec:
      containers:
        - name: pot
          image: 211125454143.dkr.ecr.ap-northeast-2.amazonaws.com/pot:latest
          ports:
            - containerPort: 8087
          resources:
            limits:
              cpu: "1"
              memory: "500Mi"
            requests:
              cpu: "0.2"
              memory: "250Mi"
