k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: pot-service
#  namespace: pot
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 8087
  selector:
    app: pot
#    version: blue  # 지금의 트래픽 버전

---
#apiVersion: v1
#kind: Service
#metadata:
#  name: pot-service
##  namespace: pot
#spec:
#  type: ClusterIP
#  ports:
#    - name: http
#      port: 80
#      targetPort: 8087
#  selector:
#    app: pot
##    version: green  # 지금의 트래픽 버전
