k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pot-ingress
#  namespace: pot
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - "server.exodiapot.xyz"
      secretName: pot-com-tls
  rules:
    - host: server.exodiapot.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pot-service
                port:
                  number: 80
